# IT-Service-Performance-Analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt
.history/: README_20260629200443.md  README_20260629200454.md
.history/docs/: Business_Context_20260629200932.md  Project_Plan_20260629200959.md
docs/: Architecture.md  Business_Context.md  Data_Dictionary.md  Dataset_Source.md  KPI_Definition.md  Project_Plan.md
notebooks/: 01_Data_Understanding.ipynb  02_Data_Cleaning.ipynb  03_Exploratory_Data_Analysis.ipynb  04_SQL_Analysis.ipynb  05_Business_Insights.ipynb
powerbi/: IT-Service-Performance-Analytics.pbip
powerbi/IT-Service-Performance-Analytics.Report/: .platform  definition.pbir
powerbi/IT-Service-Performance-Analytics.Report/definition/: report.json
powerbi/IT-Service-Performance-Analytics.Report/definition/pages/: pages.json
powerbi/IT-Service-Performance-Analytics.SemanticModel/: .platform  diagramLayout.json
powerbi/IT-Service-Performance-Analytics.SemanticModel/definition/: model.tmdl  relationships.tmdl
powerbi/IT-Service-Performance-Analytics.SemanticModel/definition/cultures/: en-US.tmdl
powerbi/IT-Service-Performance-Analytics.SemanticModel/definition/tables/: DateTableTemplate_0cd87462-3767-4d59-9c09-5bec13ecf6d8.tmdl  LocalDateTable_0ed85e12-42d8-45ae-8890-1a3f5d568f9b.tmdl  LocalDateTable_188da884-20ea-4a41-beeb-1ea0f6c767d4.tmdl  LocalDateTable_3172f542-0896-498d-8646-a7818b68ca8d.tmdl  LocalDateTable_36fb01b5-1a1b-44f1-8146-0c7f7bf3bc5b.tmdl  LocalDateTable_87437c68-3397-43f3-ac84-9c3e62d1dedc.tmdl  incident_clean.tmdl  (+1 more)
(+15 files in other folders)
